fix horizontal scroll

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -10,10 +10,6 @@ body {
   background: $color-bg;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  #root{
-    overflow-x: hidden;
-  }
 }
 
 a {
